--- a/index.html
+++ b/index.html
@@ -1,27 +1,27 @@
 <!DOCTYPE html>
 <html lang="fr">
   <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="apple-touch-icon" sizes="144x144" href="/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-    <link rel="manifest" href="/site.webmanifest">
-    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
-    <meta name="msapplication-TileColor" content="#da532c">
-    <meta name="theme-color" content="#ffffff">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="apple-touch-icon" sizes="144x144" href="/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+    <link rel="manifest" href="/site.webmanifest" />
+    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5" />
+    <meta name="msapplication-TileColor" content="#da532c" />
+    <meta name="theme-color" content="#ffffff" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
-   >
+    />
     <link
       href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital@0;1&display=swap"
       rel="stylesheet"
-   >
-    <link rel="stylesheet" href="assets/css/style.min.css">
+    />
+    <link rel="stylesheet" href="assets/css/style.min.css" />
     <title>60 ans - Belle-Île-en-Mer</title>
   </head>
   <body>
@@ -49,7 +49,71 @@
       </div>
       <div class="container">
         <div class="content info hide">
-          <h2>Infos</h2>
+          <h2>Carton d'invitation</h2>
+          <picture>
+            <img
+              src="assets/img/denis-kerpaour.webp"
+              width="510"
+              alt="Collège Kerpaour"
+            />
+          </picture>
+          <p>
+            <i class="fa fa-quote-left" aria-hidden="true"></i> On dit que dans
+            chaque vieux, il y a un jeune qui se demande ce qu’il s’est passé.
+            <br />C’est lui sur la mobylette, un 103 sport, c’est lui le jeune !
+            C’est fou, 60 ans, ce n’est pas moi ça !
+          </p>
+          <p>
+            Comme j’avais envie de fêter mes 50 ans, j’ai un peu de retard, mais
+            maintenant, je sens bien qu’il ne faut pas tarder à s’amuser. Alors
+            ni une ni deux dans un cadre splendide, je vous invite à fêter cet
+            événement.
+          </p>
+          <p>
+            Vous êtes donc invités du <strong>3 au 5 novembre 2023</strong> à
+            Belle-Île-en-Mer.
+          </p>
+          <p>Certes, il y aura des huîtres, mais pas que…</p>
+          <p>
+            Afin d’organiser au mieux les réjouissances, vous pouvez me
+            confirmer votre venue par mail
+            <a href="mailto:alvardsandz@gmail.com">alvardsandz@gmail.com</a> ou
+            par téléphone.
+          </p>
+          <p>
+            Dites-moi si vous souhaitez arriver le vendredi ou le samedi afin de
+            préparer les repas en conséquences.
+          </p>
+          <p>
+            Dans le gîte,
+            <a
+              href="https://le-relais-cotier.fr/"
+              target="_blank"
+              rel="noopener noreferrer"
+              >Le Relais côtier</a
+            >, il y a 32 places, vous pourrez y loger, pour les premiers
+            arrivés. <br>Vous pouvez consulter les tarifs sur leur             <a
+              href="https://le-relais-cotier.fr/"
+              target="_blank"
+              rel="noopener noreferrer"
+              >site</a><br />Dans la
+            rubrique « Se loger », vous trouverez les infos pour réserver
+            d’autres             <a
+              href="https://www.belle-ile.com/organiser/les-hebergements/"
+              target="_blank"
+              rel="noopener noreferrer"
+              >hébergements :</a
+            >.
+          </p>
+          <p>
+            Je rajouterais ici d’autres infos, si besoin, mais, n’hésitez pas à
+            me contacter si vous avez des questions.
+          </p>
+          <address>
+            Le Relais-Côtier <br />
+            Chemin de Port-Puce, <br />
+            56320 Sauzon
+          </address>
         </div>
         <div class="content bed hide">
           <h2>Se loger</h2>
@@ -63,7 +127,7 @@
               >Le Relais côtier</a
             >
           </p>
-          <p>Il y a 11 chambres, individuelles, 2 personnes ou 3 personnes</p>
+          <p>Il y a 11 chambres, individuelles, 2 personnes ou 3 personnes.</p>
           Vous trouverez les tarifs sur leur
           <a
             href="https://le-relais-cotier.fr/"
@@ -75,9 +139,9 @@
             Il n'y aura pas de place pour tout le monde, réservez votre chambre
             en me contactant.
           </p>
-          <hr>
+          <hr />
           <p>
-            Sur le site de Belle-île vous trouverez tous les
+            Sur le site de Belle-Île-en-Mer vous trouverez tous les
             <a
               href="https://www.belle-ile.com/organiser/les-hebergements/"
               target="_blank"
@@ -87,7 +151,7 @@
           </p>
           <ul>
             <li>
-              Campings avec des mobil-home classes et moins chers hors saison
+              Campings avec des Mobil-Home classes et moins chers hors saison
             </li>
             <li>Airbnb</li>
             <li>Chambres d'hôtes</li>
@@ -124,7 +188,7 @@
               rel="noopener noreferrer"
               >L'office de tourisme</a
             >
-            de Belle-île vous informera sur les différentes possibilités de
+            de Belle-Île-en-Mer vous informera sur les différentes possibilités de
             rejoindre Le Palais.
           </p>
           <p>
@@ -138,7 +202,10 @@
             assure le service toute l’année pour les passagers et les véhicules
             (entre 5 à 13 allers-retours par jour suivant la saison).
           </p>
-          <p><strong>Cie Océane :</strong> <a href="tel:+33297313445">+33 2 97 31 34 45</a></p>
+          <p>
+            <strong>Cie Océane :</strong>
+            <a href="tel:+33297313445">+33 2 97 31 34 45</a>
+          </p>
 
           <p>
             <strong>Durée de la traversée :</strong> 45 minutes, arrivée au port
@@ -146,12 +213,12 @@
           </p>
           <p>
             Il vous faudra prévoir d'arriver une heure avant l'embarcation afin
-            de stationner dans un des parkings situés à Quiberon. Certains
-            parkings, proposent des navettes pour rejoindre l'embarcadère.
-            Sinon, à pied, c'est environ de 15 mn.
+            de stationner dans un des parkings situés à Quiberon. <br>
+            Certains parkings, proposent des navettes pour rejoindre l'embarcadère.
+            À pied, prévoir entre à 15 minutes et 30 minutes.
           </p>
           <p>
-            Sur le site de l'office de tourisme vous trouverez tous les :
+            Sur le site de l'office de tourisme, vous trouverez tous les :
             <a
               href="https://www.belle-ile.com/organiser/venir-en-bateau-une-ile-plusieurs-ports-de-depart/au-depart-de-quiberon/ou-garer-sa-voiture-quiberon/"
               target="_blank"
@@ -161,12 +228,12 @@
           </p>
           <p>
             Certains parkings sont ouverts uniquement en haute saison, donc
-            vérifiez bien les dates d'ouvertures avant de vous y rendre 😀.
+            vérifiez bien les dates et horaires d'ouvertures avant de vous y rendre 😀.
           </p>
           <p>Le gîte Le Relais-Côtier est situé à Sauzon</p>
           <address>
-            Le Relais-Côtier <br>
-            Chemin de Port-Puce, <br>
+            Le Relais-Côtier <br />
+            Chemin de Port-Puce, <br />
             56320 Sauzon
           </address>
         </div>
