fixed size picture

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
           <picture>
             <img
               src="assets/img/denis-kerpaour.webp"
-              width="510"
+              width="650"
               alt="Collège Kerpaour"
             />
           </picture>
@@ -78,7 +78,7 @@
             Afin d’organiser au mieux les réjouissances, vous pouvez me
             confirmer votre venue par mail
             <a href="mailto:alvardsandz@gmail.com">alvardsandz@gmail.com</a> ou
-            par téléphone.
+            par téléphone dans un délai dit raisonnable.
           </p>
           <p>
             Dites-moi si vous souhaitez arriver le vendredi ou le samedi afin de
@@ -96,17 +96,17 @@
               href="https://le-relais-cotier.fr/"
               target="_blank"
               rel="noopener noreferrer"
-              >site</a><br />Dans la
+              >site</a>.<br />Dans la
             rubrique « Se loger », vous trouverez les infos pour réserver
             d’autres             <a
               href="https://www.belle-ile.com/organiser/les-hebergements/"
               target="_blank"
               rel="noopener noreferrer"
-              >hébergements :</a
+              >hébergements</a
             >.
           </p>
           <p>
-            Je rajouterais ici d’autres infos, si besoin, mais, n’hésitez pas à
+            Je rajouterais ici d’autres infos, si besoin, mais n’hésitez pas à
             me contacter si vous avez des questions.
           </p>
           <address>
@@ -218,19 +218,19 @@
             À pied, prévoir entre à 15 minutes et 30 minutes.
           </p>
           <p>
-            Sur le site de l'office de tourisme, vous trouverez tous les :
+            Sur le site de l'office de tourisme, vous trouverez tous les 
             <a
               href="https://www.belle-ile.com/organiser/venir-en-bateau-une-ile-plusieurs-ports-de-depart/au-depart-de-quiberon/ou-garer-sa-voiture-quiberon/"
               target="_blank"
               rel="noopener noreferrer"
               >parkings pour stationner à Quiberon</a
-            >
+            >.
           </p>
           <p>
             Certains parkings sont ouverts uniquement en haute saison, donc
             vérifiez bien les dates et horaires d'ouvertures avant de vous y rendre 😀.
           </p>
-          <p>Le gîte Le Relais-Côtier est situé à Sauzon</p>
+          <p>Le gîte Le Relais-Côtier est situé à Sauzon.</p>
           <address>
             Le Relais-Côtier <br />
             Chemin de Port-Puce, <br />
