--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       </div>
       <div class="container">
         <div class="content info hide">
-          <h2>Carton d'invitation</h2>
+          <h2>Invitation</h2>
           <picture>
             <img
               src="assets/img/denis-kerpaour.webp"
@@ -181,6 +181,7 @@
         </div>
         <div class="content ship hide">
           <h2>Accès</h2>
+          <p>En train ou en voiture jusqu'à Quiberon</p>
           <p>
             <a
               href="https://www.belle-ile.com/organiser/venir-en-bateau-une-ile-plusieurs-ports-de-depart/"
