--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
   <body>
     <header>
       <div class="birth-title">
+        <div class="birthday">60 ans &#x1F382;</div>
         <div class="birthday">Belle-Île-en-Mer</div>
-        <div class="birthday">&#x1F382; 60 ans</div>
       </div>
       <nav>
         <i data-icon="info" class="icon fa fa-info" aria-hidden="false"></i>
@@ -51,12 +51,12 @@
         <div class="content info hide">
           <h2>Invitation</h2>
           <picture>
-            <img
+            <img class="info-pic"
               src="assets/img/denis-kerpaour.webp"
               width="650"
               alt="Collège Kerpaour"
             />
-          </picture>
+          </picture>          
           <p>
             <i class="fa fa-quote-left" aria-hidden="true"></i> On dit que dans
             chaque vieux, il y a un jeune qui se demande ce qu’il s’est passé.
@@ -70,7 +70,7 @@
             événement.
           </p>
           <p>
-            Vous êtes donc invités du <strong>3 au 5 novembre 2023</strong> à
+            Vous êtes donc conviés du <strong>3 au 5 novembre 2023</strong> à
             Belle-Île-en-Mer.
           </p>
           <p>Certes, il y aura des huîtres, mais pas que…</p>
@@ -79,7 +79,7 @@
             confirmer votre venue par mail
             <a href="mailto:alvardsandz@gmail.com">alvardsandz@gmail.com</a> ou
             par téléphone dans un délai dit raisonnable.
-          </p>
+          </p><div style="clear: both;"></div>
           <p>
             Dites-moi si vous souhaitez arriver le vendredi ou le samedi afin de
             préparer les repas en conséquences.
@@ -114,6 +114,7 @@
             Chemin de Port-Puce, <br />
             56320 Sauzon
           </address>
+          <div style="clear: both;"></div>
         </div>
         <div class="content bed hide">
           <h2>Se loger</h2>
@@ -216,7 +217,7 @@
             Il vous faudra prévoir d'arriver une heure avant l'embarcation afin
             de stationner dans un des parkings situés à Quiberon. <br>
             Certains parkings, proposent des navettes pour rejoindre l'embarcadère.
-            À pied, prévoir entre à 15 minutes et 30 minutes.
+            À pied, prévoir entre à 15 et 30 minutes.
           </p>
           <p>
             Sur le site de l'office de tourisme, vous trouverez tous les 
@@ -229,7 +230,7 @@
           </p>
           <p>
             Certains parkings sont ouverts uniquement en haute saison, donc
-            vérifiez bien les dates et horaires d'ouvertures avant de vous y rendre 😀.
+            vérifiez bien les dates et horaires d'ouverture avant de vous y rendre 😀.
           </p>
           <p>Le gîte Le Relais-Côtier est situé à Sauzon.</p>
           <address>
@@ -237,6 +238,9 @@
             Chemin de Port-Puce, <br />
             56320 Sauzon
           </address>
+          <p>Si vous désirez visiter l'île, vous pourrez louer voitures, scooters, vélos.</p>
+          <p><strong>Location de voiture : </strong><a href="https://www.locatourisle.com/" target="_blank"
+              rel="noopener noreferrer">Locatourisle</a></p>
         </div>
       </div>
     </main>
