--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
           <p>
             <i class="fa fa-quote-left" aria-hidden="true"></i> On dit que dans
             chaque vieux, il y a un jeune qui se demande ce qu’il s’est passé.
-            <br />C’est lui sur la mobylette, un 103 sport, c’est lui le jeune !
-            C’est fou, 60 ans, ce n’est pas moi ça !
+            <br />C’est lui sur la mobylette, un 103 sport, c’est lui le jeune.
+            C’est fou, 60 ans, ce n’est pas moi ça ! Faut absolument que je remette la main sur ce gilet !
           </p>
           <p>
             Comme j’avais envie de fêter mes 50 ans, j’ai un peu de retard, mais
@@ -161,24 +161,8 @@
           </ul>
         </div>
         <div class="content cutlery hide">
-          <h2>Restauration</h2>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque
-          temporibus dignissimos asperiores tenetur, obcaecati at ex assumenda
-          aliquam. Aperiam tempore aliquam amet excepturi maxime, perspiciatis
-          ipsam quisquam nobis quod vel? Ipsa quod vitae accusantium earum,
-          facilis consectetur consequatur distinctio, officia labore sed fuga
-          beatae quos, explicabo ducimus dolor! Qui nulla repudiandae facere
-          animi aliquid odio dolore, totam magni cum? Suscipit! Id hic earum
-          odit sunt dignissimos non culpa iure, illo nemo architecto repellendus
-          laboriosam quam quasi doloremque, facere laborum debitis a officia
-          quos quidem dicta cumque voluptate! Dignissimos, excepturi. Sequi.
-          Sequi sit, minus debitis aliquid dolore odit tempore facere eum ea
-          tenetur asperiores facilis quisquam atque fugit! Nihil totam ex
-          numquam eum officia, non libero ipsum eos vitae reprehenderit rem.
-          Laborum neque iure obcaecati quas quam quo ut ab. Atque magnam nemo
-          fugit! Laudantium, labore, voluptatibus quidem voluptatum non quae
-          dolores tempora officiis cumque fugit, nulla sapiente recusandae.
-          Tenetur, non!
+          <h2>À table</h2>
+          <h3>Coming soon! &#x1F60B;</h3>
         </div>
         <div class="content ship hide">
           <h2>Accès</h2>
