--- a/index.html
+++ b/index.html
@@ -9,13 +9,12 @@
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
     <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
     <meta name="msapplication-TileColor" content="#da532c">
-    <meta name="description" content="birthday">
+    <meta name="description" content="Birthday">
+    <meta name="author" content="Denis Godec">
     <meta name="theme-color" content="#ffffff">
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
-  >
-    <link rel="stylesheet" href="assets/css/style.min.css">
+    <link rel="stylesheet" media="all" href="assets/fonts/fontawesome/css/fontawesome-ile.css">
+    <link rel="stylesheet" media="all" href="assets/fonts/fontawesome/css/solid.css">
+    <link rel="stylesheet" media="all" href="assets/css/style.min.css">
     <title>60 ans - Belle-Île-en-Mer</title>
   </head>
   <body>
@@ -44,15 +43,13 @@
       <div class="container">
         <div class="content info hide">
           <h2>Invitation</h2>
-          <picture>
-            <img
-              class="info-pic"
-              src="assets/img/denis-kerpaour.webp"
-              width="650"
-              height="387"
-              alt="Collège Kerpaour"
-          >
-          </picture>
+          <figure>
+            <img srcset="
+              assets/img/denis-kerpaour-351x209.webp 350w,
+              assets/img/denis-kerpaour-750x347.webp 750w"
+              sizes="(max-width: 650px) 100vw"
+              src="assets/img/denis-kerpaour.webp" alt="Collège Kerpaour" class="info-pic">
+          </figure>
           <p>
             <i class="fa fa-quote-left" aria-hidden="true"></i> On dit que dans
             chaque vieux, il y a un jeune qui se demande ce qu’il s’est passé.
@@ -99,7 +96,7 @@
             >.
           </p>
           <p>
-            Je rajouterai ici d’autres infos, si besoin, mais n’hésitez pas à me
+            Je rajouterai ici, au besoin, d’autres infos, mais n’hésitez pas à me
             contacter si vous avez des questions.
           </p>
           <address>
@@ -162,10 +159,10 @@
           <h2>Accès</h2>
           <p>En train ou en voiture jusqu'à Quiberon</p>
           <p>
-            Il vous faudra prévoir d'arriver une heure avant l'embarcation afin
+            Il vous faudra prévoir d'arriver une heure avant l'embarquement afin
             de stationner dans un des parkings situés à Quiberon. <br>
             Certains parkings proposent des navettes pour rejoindre
-            l'embarcadère. À pied, prévoir entre à 15 et 30 minutes.
+            l'embarcadère. À pied, prévoir entre 15 et 30 minutes.
           </p>
           <p>
             Certains parkings sont ouverts uniquement en haute saison, donc
@@ -209,8 +206,8 @@
               rel="noopener noreferrer"
               >L'office de tourisme</a
             >
-            de Belle-Île-en-Mer vous informe sur les différents ports de
-            départs.
+            de Belle-Île-en-Mer vous informe sur d'autres ports de
+            départ à partir du continent.
           </p>
 
           <p>Le gîte <i>Le Relais-Côtier</i> est situé à Sauzon.</p>
