--- a/index_old.html
+++ b/index_old.html
@@ -57,10 +57,15 @@
           <h2>Invitation</h2>
           <picture>
             <img
-              class="info-pic"
+              srcset="
+                assets/img/denis-kerpaour-351x209.webp 350w,
+                assets/img/denis-kerpaour-750x347.webp 750w
+              "
+              sizes="(max-width: 650px) 350px, 750px"
               src="assets/img/denis-kerpaour.webp"
-              width="650"
               alt="Collège Kerpaour"
+              width="650"
+              class="info-pic"
             />
           </picture>
           <p>
