--- a/index.html
+++ b/index.html
@@ -1,20 +1,28 @@
 <!DOCTYPE html>
 <html lang="fr">
   <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="apple-touch-icon" sizes="144x144" href="/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
-    <meta name="msapplication-TileColor" content="#da532c">
-    <meta name="description" content="Birthday">
-    <meta name="author" content="Denis Godec">
-    <meta name="theme-color" content="#ffffff">
-    <link rel="stylesheet" media="all" href="assets/fonts/fontawesome/css/fontawesome-ile.css">
-    <link rel="stylesheet" media="all" href="assets/fonts/fontawesome/css/solid.css">
-    <link rel="stylesheet" media="all" href="assets/css/style.min.css">
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="apple-touch-icon" sizes="144x144" href="/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5" />
+    <meta name="msapplication-TileColor" content="#da532c" />
+    <meta name="description" content="Birthday" />
+    <meta name="author" content="Denis Godec" />
+    <meta name="theme-color" content="#ffffff" />
+    <link
+      rel="stylesheet"
+      media="all"
+      href="assets/fonts/fontawesome/css/fontawesome-ile.css"
+    />
+    <link
+      rel="stylesheet"
+      media="all"
+      href="assets/fonts/fontawesome/css/solid.css"
+    />
+    <link rel="stylesheet" media="all" href="assets/css/style.min.css" />
     <title>60 ans - Belle-Île-en-Mer</title>
   </head>
   <body>
@@ -44,16 +52,21 @@
         <div class="content info hide">
           <h2>Invitation</h2>
           <figure>
-            <img srcset="
-              assets/img/denis-kerpaour-351x209.webp 350w,
-              assets/img/denis-kerpaour-750x347.webp 750w"
+            <img
+              srcset="
+                assets/img/denis-kerpaour-351x209.webp 350w,
+                assets/img/denis-kerpaour-750x347.webp 750w
+              "
               sizes="(max-width: 650px) 100vw"
-              src="assets/img/denis-kerpaour.webp" alt="Collège Kerpaour" class="info-pic">
+              src="assets/img/denis-kerpaour.webp"
+              alt="Collège Kerpaour"
+              class="info-pic"
+            />
           </figure>
           <p>
             <i class="fa fa-quote-left" aria-hidden="true"></i> On dit que dans
             chaque vieux, il y a un jeune qui se demande ce qu’il s’est passé.
-            <br>C’est lui sur la mobylette, le jeune. C’est moi ça ! Faut
+            <br />C’est lui sur la mobylette, le jeune. C’est moi ça ! Faut
             absolument que je remette la main sur ce gilet !
           </p>
           <p>
@@ -86,7 +99,7 @@
               rel="noopener noreferrer"
               >Le Relais côtier</a
             >, il y a 32 places, vous pourrez y loger, pour les premiers
-            arrivés. <br>Dans la rubrique « Se loger », vous trouverez les
+            arrivés. <br />Dans la rubrique « Se loger », vous trouverez les
             infos pour réserver d’autres
             <a
               href="https://www.belle-ile.com/organiser/les-hebergements/"
@@ -96,12 +109,12 @@
             >.
           </p>
           <p>
-            Je rajouterai ici, au besoin, d’autres infos, mais n’hésitez pas à me
-            contacter si vous avez des questions.
+            Je rajouterai ici, au besoin, d’autres infos, mais n’hésitez pas à
+            me contacter si vous avez des questions.
           </p>
           <address>
-            Le Relais-Côtier <br>
-            Chemin de Port-Puce, <br>
+            Le Relais-Côtier <br />
+            Chemin de Port-Puce, <br />
             56320 Sauzon
           </address>
           <div style="clear: both"></div>
@@ -131,7 +144,27 @@
             en me contactant car j'ai l'exclusivité et la gestion du gîte pour
             cette période.
           </p>
-          <hr>
+          <table>
+            <thead>
+              <tr>
+                <th colspan="3">Chambres restantes *</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td>1 lit</td>
+                <td>2 lits</td>
+                <td> 3 lits</td>
+              </tr>
+              <tr>
+                <td>2</td>
+                <td>10</td>
+                <td>3</td>
+              </tr>
+            </tbody>
+          </table>
+          <p>* mis à jour / réservation</p>
+          <hr />
           <p>
             Sur le site de Belle-Île-en-Mer vous trouverez tous les
             <a
@@ -160,7 +193,7 @@
           <p>En train ou en voiture jusqu'à Quiberon</p>
           <p>
             Il vous faudra prévoir d'arriver une heure avant l'embarquement afin
-            de stationner dans un des parkings situés à Quiberon. <br>
+            de stationner dans un des parkings situés à Quiberon. <br />
             Certains parkings proposent des navettes pour rejoindre
             l'embarcadère. À pied, prévoir entre 15 et 30 minutes.
           </p>
@@ -187,7 +220,7 @@
             >
             assure la liaison <strong>Quiberon – Le Palais :</strong> toute
             l’année pour les passagers et les véhicules (entre 5 à 13
-            allers-retours par jour suivant la saison). <br>Pensez à réserver
+            allers-retours par jour suivant la saison). <br />Pensez à réserver
             votre trajet A/R !
           </p>
           <p>
@@ -206,8 +239,8 @@
               rel="noopener noreferrer"
               >L'office de tourisme</a
             >
-            de Belle-Île-en-Mer vous informe sur d'autres ports de
-            départ à partir du continent.
+            de Belle-Île-en-Mer vous informe sur d'autres ports au départ du
+            continent.
           </p>
 
           <p>Le gîte <i>Le Relais-Côtier</i> est situé à Sauzon.</p>
@@ -220,8 +253,8 @@
             <li>Navettes (à confirmer)</li>
           </ul>
           <address>
-            Le Relais-Côtier <br>
-            Chemin de Port-Puce <br>
+            Le Relais-Côtier <br />
+            Chemin de Port-Puce <br />
             56360 Sauzon
           </address>
           <p>
