--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
   <body>
     <header>
       <div class="birth-title">
-        <div class="birthday">60 ans &#x1F382;</div>
-        <div class="birthday">Belle-Île-en-Mer</div>
+        <h1 class="birthday">60 ans &#x1F382;</h1>
+        <h1 class="birthday">Belle-Île-en-Mer</h1>
       </div>
       <nav>
         <i data-icon="info" class="icon fa fa-info" aria-hidden="false"></i>
@@ -131,7 +131,7 @@
               >Le Relais côtier</a
             >
           </p>
-          <p>Il y a 11 chambres, individuelles, 2 personnes ou 3 personnes.</p>
+          <p>Il y a 11 chambres, 2 personnes ou 3 personnes.</p>
           Vous trouverez les tarifs sur leur
           <a
             href="https://le-relais-cotier.fr/"
@@ -147,19 +147,17 @@
           <table>
             <thead>
               <tr>
-                <th colspan="3">Chambres restantes *</th>
+                <th colspan="2">Chambres restantes *</th>
               </tr>
             </thead>
             <tbody>
               <tr>
-                <td>1 lit</td>
                 <td>2 lits</td>
                 <td> 3 lits</td>
               </tr>
               <tr>
                 <td>2</td>
-                <td>10</td>
-                <td>3</td>
+                <td>9</td>
               </tr>
             </tbody>
           </table>
@@ -176,7 +174,7 @@
           </p>
           <ul>
             <li>
-              Campings avec des Mobil-Home classes et moins chers hors saison
+              Campings Mobil-Home
             </li>
             <li>Airbnb</li>
             <li>Chambres d'hôtes</li>
