--- a/index.html
+++ b/index.html
@@ -53,12 +53,13 @@
           <h2>Invitation</h2>
           <figure>
             <img
+              src="assets/img/denis-kerpaour.webp"
+              width="650"
               srcset="
-                assets/img/denis-kerpaour-351x209.webp 350w,
+                assets/img/denis-kerpaour-351x209.webp 351w,
                 assets/img/denis-kerpaour-750x347.webp 750w
               "
               sizes="(max-width: 650px) 100vw"
-              src="assets/img/denis-kerpaour.webp"
               alt="Collège Kerpaour"
               class="info-pic"
             />
@@ -153,7 +154,7 @@
             <tbody>
               <tr>
                 <td>2 lits</td>
-                <td> 3 lits</td>
+                <td>3 lits</td>
               </tr>
               <tr>
                 <td>2</td>
@@ -173,9 +174,7 @@
             >
           </p>
           <ul>
-            <li>
-              Campings Mobil-Home
-            </li>
+            <li>Campings Mobil-Home</li>
             <li>Airbnb</li>
             <li>Chambres d'hôtes</li>
             <li>Auberge de jeunesse</li>
