--- a/index.html
+++ b/index.html
@@ -53,8 +53,10 @@
           <h2>Invitation</h2>
           <figure>
             <img
+              loading="lazy"
               src="assets/img/denis-kerpaour.webp"
               width="650"
+              height="347"
               srcset="
                 assets/img/denis-kerpaour-351x209.webp 351w,
                 assets/img/denis-kerpaour-750x347.webp 750w
@@ -76,10 +78,6 @@
             ni une ni deux dans un cadre splendide, je vous invite à fêter cet
             événement.
           </p>
-          <p>
-            Vous êtes donc invités du <strong>3 au 5 novembre 2023</strong> à
-            Belle-Île-en-Mer.
-          </p>
           <p>Certes, il y aura des huîtres, mais pas que…</p>
           <p>
             Afin d’organiser au mieux les réjouissances, vous pouvez me
@@ -87,11 +85,22 @@
             <a href="mailto:alvardsandz@gmail.com">alvardsandz@gmail.com</a> ou
             par téléphone avant le 20 septembre.
           </p>
-          <div style="clear: both"></div>
+
           <p>
             Dites-moi si vous souhaitez arriver le vendredi ou le samedi afin de
             préparer les repas en conséquence.
           </p>
+          <div style="clear: both"></div>
+          <blockquote>
+            Vous êtes invités du <strong>3 au 5 novembre 2023</strong> à
+            Belle-Île-en-Mer.
+            <address>
+              Le Relais-Côtier <br />
+              Chemin de Port-Puce, <br />
+              56320 Sauzon
+            </address>
+          </blockquote>
+
           <p>
             Dans le gîte,
             <a
@@ -113,12 +122,6 @@
             Je rajouterai ici, au besoin, d’autres infos, mais n’hésitez pas à
             me contacter si vous avez des questions.
           </p>
-          <address>
-            Le Relais-Côtier <br />
-            Chemin de Port-Puce, <br />
-            56320 Sauzon
-          </address>
-          <div style="clear: both"></div>
         </div>
         <div class="content bed hide">
           <h2>Se loger</h2>
@@ -177,7 +180,6 @@
             <li>Campings Mobil-Home</li>
             <li>Airbnb</li>
             <li>Chambres d'hôtes</li>
-            <li>Auberge de jeunesse</li>
             <li>Hôtels</li>
           </ul>
         </div>
@@ -207,6 +209,28 @@
               rel="noopener noreferrer"
               >parkings pour stationner à Quiberon</a
             >.
+          </p>
+          <p>
+            <a href="https://www.ville-quiberon.fr/parking-des-iles/"
+              >Parking des îles</a
+            >
+            (navettes gratuites)
+          </p>
+          <p>
+            <a
+              href="https://parkingdekerne.com/"
+              target="_blank"
+              rel="noopener noreferrer"
+              >Parking de Kerné</a
+            >
+            à réserver (navettes gratuites)
+          </p>
+          <p></p>
+          <p>
+            <a href="https://quiberon-parking.fr/index.html"
+              >Parking de Sizorn</a
+            >
+            le plus proche de la gare maritime
           </p>
           <p>
             <a
@@ -270,6 +294,6 @@
         </div>
       </div>
     </main>
-    <script src="assets/js/custom.js" defer></script>
+    <script src="assets/js/belleile.min.js" defer></script>
   </body>
 </html>
